--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>사랑해</title>
+    <title>선화 사랑해</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,10 +18,9 @@
         </div>
         <div class="heart"></div>
         <div class="message">
-            <h1>사랑해</h1>
-            <p>당신의 미소가 내 하루를 밝게 비춰줘요</p>
-            <p>함께하는 모든 순간이 특별해요</p>
-            <p>영원히 당신을 사랑할게요</p>
+            <h1>선화 사랑해</h1>
+            <p>선화야, 너의 미소가 내 하루를 밝게 비춰줘</p>
+            <p>함께하는 모든 순간이 행복해</p>
         </div>
         <div class="floating-hearts">
             <span>♥</span>
